@@ -1,5 +1,8 @@
 Release Notes
 
+* 2/28/2019
+  * added useZipToPin
+
 * 2/18/2019
   * to set nEvents to zip
 
